# genprompt

./: .gitignore  README.md  environment.yml  requirements.txt
backend/: app.py  build_faiss_index.py  download.py  download_dataset.py  environment.yml  requirements.txt  search.py  server.py  test_token.py  train_index.py
frontend/promptwtf/: package-lock.json  package.json
frontend/promptwtf/src/styles/: globals.css  theme.ts
genprompt/: .gitignore  bun.lockb  next.config.ts  package-lock.json  package.json
genprompt/drizzle/: 0000_rapid_silverclaw.sql
genprompt/drizzle/meta/: 0000_snapshot.json
genprompt/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
genprompt/src-tauri/icons/: icon.icns
genprompt/src-tauri/python/: requirements.txt  search.py  server.py
genprompt/src-tauri/scripts/: prepare-python-deps.js
genprompt/src-tauri/src/: main.rs
genprompt/src/app/: layout.tsx  page.tsx
genprompt/src/app/api/: python-api.ts  tauri-api.ts
genprompt/src/app/auth-callback/: page.tsx
genprompt/src/app/desktop/: layout.tsx  page.tsx
genprompt/src/components/: Navbar.tsx  TauriProvider.tsx
genprompt/src/components/auth/: AuthDialog.tsx  OneTimePassword.tsx
promptwtf/: bun.lockb  clerk.json  package-lock.json  package.json
promptwtf/drizzle/: 0001_good_ultimates.sql
promptwtf/drizzle/meta/: 0001_snapshot.json  _journal.json
promptwtf/public/demos/: demo0.avif
promptwtf/src/: middleware.ts
promptwtf/src/app/: globals.css  layout.tsx  page.tsx
promptwtf/src/components/: Navbar.tsx  NotifyMeButton.tsx
promptwtf/src/lib/: user.ts
(+12 files in other folders)
