[package]
name = "promptwtf-app"
version = "0.1.0"
description = "promptwtf desktop app"
authors = ["Michael Tikhonovsky"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tauri-plugin-log = "2.0.0-rc"
image = "0.24.7"
rand = "0.8.5"
anyhow = "1.0.79"
thiserror = "1.0.56"
once_cell = "1.19.0"
reqwest = { version = "0.11.24", features = ["json", "multipart"] }
futures = "0.3.30"
tempfile = "3.10.0"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
